feat: Add date range in schedule list api
